# fmri_event_timing_dsl

./: grammar.py  pyproject.toml  readme.md
eventtiming/: __main__.py  deconvolve.py  event.py  event_maker.py  grammar.py
fmri_timing/: __main__.py  event_tree.py  iti.py
tests/: test_generic.py
